# foremen-uipath

./: .gitignore  README.md
UI/: .env.example  .gitignore  INTEGRATION.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
UI/.claude/: settings.json
UI/server/: LIVE_SETUP.md  foreman_vision_agent.py  replay_trace.py  requirements-deploy.txt  requirements.txt  view_backend.py
UI/src/: App.tsx  config.ts  index.css  (+1 more)
agents/: .env.example
agents/foreman-entitlement/: agent.mermaid  entry-points.json  input.json  input.partial.json  main.py  project.uiproj  pyproject.toml
agents/foreman-fleet-blast-radius/: agent.mermaid  entry-points.json  foreman_events.py  input.json  kg.py  kg_check.py  kg_sync_foreman.py  main.py  project.uiproj  pyproject.toml  uipath.json
agents/foreman-vision/: agent.mermaid  bindings.json  entry-points.json  input.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/foreman-voice/: agent.mermaid  entry-points.json  input.json  main.py  project.uiproj  pyproject.toml  uipath.json  voice_server.py
agents/foreman-weather/: agent.mermaid  entry-points.json  input.json  main.py  project.uiproj  pyproject.toml  uipath.json
context-grounding/: SK-cnc-spindle-vibration.md  SK-coastal-rf-corrosion.md  SK-dc-crac-condensate.md  SK-dg-injector-knock.md  SK-elevator-sheave-wear.md  SK-escalator-stepchain.md  SK-hvac-chiller-shortcycle.md  SK-imm-aux-hydraulic-leak.md  SK-imm-checkring-suckback.md  SK-imm-screw-wear.md  SK-imm-tiebar-imbalance.md  SK-pv-combiner-arc.md  SK-pv-mc4-connector-burn.md  SK-rail-axle-hotbox.md  SK-reefer-undercharge.md  SK-tower-anchorbolt-torque.md  SK-transformer-bushing-pd.md  SK-water-dosingpump-diaphragm.md
data-fabric/: Asset.csv  AssetIssueHistory.csv  Crew.csv  Inventory.csv  PartLot.csv  README.md  Schema.json  ServiceContract.csv  Site.csv  Vendor.csv  Warranty.csv
integrations/: .env.example  voice_server.py
(+273 files in other folders)
