[project]
name = "foreman-fleet-blast-radius-v1"
version = "0.0.1"
description = "FOREMAN Fleet and Blast-Radius (Neo4j) coded agent"
authors = [{ name = "Aditya Singh" }]
dependencies = [
    "uipath-langchain[bedrock,vertex]>=0.10.0, <0.11.0",
    "neo4j>=5.0",
    "httpx>=0.27",
    "truststore>=0.9",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.74",
]
