[project]
name = "foreman-weather"
version = "0.0.1"
description = "foreman-weather"
authors = [{ name = "Aditya Singh" }]
dependencies = [
    "uipath-langchain-client[bedrock]>=1.11.3",
    "uipath-langchain[bedrock,vertex]>=0.10.0, <0.11.0",
    "langchain-mcp-adapters>=0.1.0",
    "tzdata>=2024.1",
]
requires-python = ">=3.11"
